objects/vlocity_ins__PolicyCreditSurcharge__c.object
<CustomObject>
    <description>DEPRECATED. Represents credits and surcharge fees associated with an insurance policy. Master-detail child object of Policy.</description>
    <fields>
        <fullName>vlocity_ins__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Code__c</fullName>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Factor__c</fullName>
        <label>Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyId__c</fullName>
        <label>Policy</label>
        <referenceTo>vlocity_ins__Policy__c</referenceTo>
        <relationshipName>Credits_and_Surcharges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Surcharge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Credit &amp; Surcharge</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credits &amp; Surcharges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>